5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1590_842.log
== TEST (2019-03-25 14:18:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

n=int(input("numero inteiro de quatro digitos: "))
a=(n%10)
b=(n//10)%10
c=(n//10)//10%10
d=(n//1000)
print(a+b+c+d)


-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:18:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

n=int(input("numero inteiro de quatro digitos: "))
a=(n%10)
b=(n//10)%10
c=(n//10)//10%10
d=(n//1000)
print(a+b+c+d)


-- EXECUTION TIME:
0.149186
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:23:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

n=int(input("numero inteiro de quatro digitos: "))
a=(n%10)
print(a)
b=(n//10)%10
print(b)
c=(n//10)//10%10
print(c)
d=(n//1000)
print(d)
print(a+b+c+d)


-- OUTPUT:
3
7
1
9
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:32:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a=int(input("numero inteiro de quatro digitos: "))
b=n//1000
c=a%1000
d=c//1000
e=c%1000
f=e//10
g=e%10
print(a+b+c+d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=n//1000
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:32:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a=int(input("numero inteiro de quatro digitos: "))
b=n//1000
c=a%1000
d=c//1000
e=c%1000
f=e//10
g=e%10
print(b+d+f+g)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=n//1000
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a=int(input("numero inteiro de quatro digitos: "))
b=a//1000
c=a%1000
d=c//1000
e=c%1000
f=e//10
g=e%10
print(b+d+f+g)


-- EXECUTION TIME:
0.178257
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
29
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a=int(input("numero inteiro de quatro digitos: "))
b=a//1000
c=a%1000
d=c//100
e=c%1000
f=e//10
g=e%10
print(b+d+f+g)


-- EXECUTION TIME:
0.173979
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
30
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:33:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a=int(input("numero inteiro de quatro digitos: "))
b=a//1000
c=a%1000
d=c//100
e=c%1000
f=e//10
g=e%10
print(b+d+f+g)


-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:35:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

n=int(input("numero inteiro de quatro digitos: "))
a=(n%10)
b=(n//10)%10
c=(n//10)//10%10
d=(n//1000)
print(a+b+c+d)


-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

n=int(input("numero inteiro de quatro digitos: "))
a=(n%10)
b=(n//10)%10
c=(n//10)//10%10
d=(n//1000)
print(a+b+c+d)


-- EXECUTION TIME:
0.184987
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
